fix the touch scrolling issue on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@ body {
     border-radius: 50%;
     background: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    /* Prevent default touch behaviors */
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .hour-hand, .minute-hand {
